--- a/app/src/main/res/layout/birthday_list.xml
+++ b/app/src/main/res/layout/birthday_list.xml
@@ -12,7 +12,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView"
-        app:srcCompat="@drawable/person_1" />
+        app:srcCompat="@drawable/person_1"
+        android:contentDescription="@string/profile_picture" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -57,7 +58,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/bar_1" />
+                app:srcCompat="@drawable/bar_1"
+                android:contentDescription="@string/vertical_bar" />
 
             <ImageView
                 android:id="@+id/cake_1"
@@ -66,7 +68,8 @@
                 android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@+id/name_1"
                 app:layout_constraintTop_toBottomOf="@+id/name_1"
-                app:srcCompat="@drawable/cake" />
+                app:srcCompat="@drawable/cake"
+                android:contentDescription="@string/cake_icon" />
 
             <ImageView
                 android:id="@+id/calendar_1"
@@ -77,17 +80,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/cake_1"
                 app:layout_constraintTop_toBottomOf="@+id/cake_1"
-                app:srcCompat="@drawable/calendar" />
+                app:srcCompat="@drawable/calendar"
+                android:contentDescription="@string/calendar_icon" />
 
             <TextView
                 android:id="@+id/birthday_date_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="16dp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/_20_10_2020"
                 android:textColor="@color/black"
-                android:textSize="13sp"
+                android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="@+id/cake_1"
                 app:layout_constraintStart_toEndOf="@+id/cake_1"
                 app:layout_constraintTop_toTopOf="@+id/cake_1" />
@@ -96,14 +100,24 @@
                 android:id="@+id/days_left_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="16dp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/_30_days_left"
                 android:textColor="@color/black"
-                android:textSize="13sp"
+                android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="@+id/calendar_1"
                 app:layout_constraintStart_toEndOf="@+id/calendar_1"
                 app:layout_constraintTop_toTopOf="@+id/calendar_1" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="59dp"
+                android:layout_height="77dp"
+                android:layout_marginEnd="27dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/flowers" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
