--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,12 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/good_morning"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +28,8 @@
         android:layout_marginStart="20dp"
         android:src="@drawable/heart"
         app:layout_constraintBottom_toBottomOf="@+id/good_morning"
-        app:layout_constraintStart_toEndOf="@+id/good_morning" />
+        app:layout_constraintStart_toEndOf="@+id/good_morning"
+        android:contentDescription="@string/heart_icon_1" />
 
     <ImageView
         android:id="@+id/heart_1b"
@@ -38,7 +39,8 @@
         android:layout_marginBottom="3dp"
         android:src="@drawable/heart_1"
         app:layout_constraintBottom_toBottomOf="@+id/heart_1a"
-        app:layout_constraintStart_toStartOf="@+id/heart_1a" />
+        app:layout_constraintStart_toStartOf="@+id/heart_1a"
+        android:contentDescription="@string/heart_icon_1b" />
 
     <ImageView
         android:id="@+id/heart_2"
@@ -48,7 +50,8 @@
         android:layout_marginBottom="14dp"
         android:src="@drawable/heart_2"
         app:layout_constraintBottom_toBottomOf="@+id/heart_1a"
-        app:layout_constraintStart_toStartOf="@+id/heart_1a" />
+        app:layout_constraintStart_toStartOf="@+id/heart_1a"
+        android:contentDescription="@string/heart_icon_2" />
 
     <ImageView
         android:id="@+id/heart_3"
@@ -58,7 +61,8 @@
         android:layout_marginBottom="4dp"
         android:src="@drawable/heart_3"
         app:layout_constraintBottom_toBottomOf="@+id/heart_2"
-        app:layout_constraintEnd_toStartOf="@+id/heart_2" />
+        app:layout_constraintEnd_toStartOf="@+id/heart_2"
+        android:contentDescription="@string/heart_icon_3" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/notificationCardview"
@@ -99,7 +103,8 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:contentDescription="@string/notification_badge" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -111,7 +116,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/notification_bell" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -141,15 +147,17 @@
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintBottom_toBottomOf="@+id/edit_text"
         app:layout_constraintEnd_toEndOf="@+id/edit_text"
-        app:layout_constraintTop_toTopOf="@+id/edit_text" />
+        app:layout_constraintTop_toTopOf="@+id/edit_text"
+        android:contentDescription="@string/search_icon" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -160,11 +168,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/upcoming_birthdays"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
-                android:fontFamily="@font/montserrat"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/viewPager2" />
 
@@ -197,7 +206,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
-        android:backgroundTint="@color/purple_200"
         android:src="@drawable/ic_baseline_add_24"
         android:contentDescription="@string/add_upcoming_birthdays"
         app:layout_constraintBottom_toBottomOf="parent"
